--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <button class="px-6 py-3 border border-blue-500 text-blue-500 rounded">Learn more</button>
       </div>
       <div class="mt-10">
-        <img src="globe.png" alt="Global Network" class="w-full max-w-md" />
+        <img src="https://i.pinimg.com/originals/6b/c0/bf/6bc0bf19074aa73ba2e67c4ac1bc1315.png" alt="Global Network" class="w-full max-w-md" />
       </div>
     </main>
 
